--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,1 +1,2 @@
 <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
